fix title spacing

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -3,6 +3,5 @@
   overflow-y: scroll;
   position: fixed;
   padding-top: 2%;
-  margin-top: 2%;
   padding-bottom: 20%;
 }
