--- a/src/pages/List/List.scss
+++ b/src/pages/List/List.scss
@@ -1,5 +1,5 @@
 #jobContainer {
-  max-height: 80%;
+  max-height: 90%;
   overflow-y: scroll;
   position: fixed;
 }
